jsonschemadsl2ecore.trafo.opt/test/test79/invalidtests/example4.test79
{
	"prop1":true,
	"prop2":1.2
}